--- a/Predicción de tarifas de taxis.ipynb
+++ b/Predicción de tarifas de taxis.ipynb
@@ -377,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Estadisticas"
+    "# Estadísticas"
    ]
   },
   {
@@ -632,6 +632,323 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Seleccionar passenger_count de 0-9\n",
+    "dfspark_sample = dfspark_sample.filter(\"passenger_count < 10\")\n",
+    "#Selecionar fare_amount mayor a 0\n",
+    "dfspark_sample = dfspark_sample.filter(\"fare_amount >= 0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfspark_sample.groupBy(\"passenger_count\").count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Agregamos columnas de diferencias.\n",
+    "from pyspark.sql.functions import abs\n",
+    "dfspark_sample = dfspark_sample.withColumn(\"dif_latitude\",\n",
+    "                                           abs(dfspark_sample['dropoff_latitude']-dfspark_sample['pickup_latitude']))\n",
+    "dfspark_sample = dfspark_sample.withColumn(\"dif_longitude\",\n",
+    "                                           abs(dfspark_sample['dropoff_longitude']-dfspark_sample['pickup_longitude']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Crear dos columnas día de la semana y hora del viaje."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funciones que me ayudarán en la transformación.\n",
+    "from datetime import datetime, date, time, timedelta\n",
+    "import calendar\n",
+    "def dia(dia):\n",
+    "    if dia == 1:\n",
+    "        return 'lunes'\n",
+    "    if dia == 2:\n",
+    "        return 'martes'\n",
+    "    if dia == 3:\n",
+    "        return 'miércoles'\n",
+    "    if dia == 4:\n",
+    "        return 'jueves'\n",
+    "    if dia == 5:\n",
+    "        return 'viernes'\n",
+    "    if dia == 6:\n",
+    "        return 'sábado'\n",
+    "    if dia == 7:\n",
+    "        return 'domingo'\n",
+    "    if dia < 1 or dia > 7:\n",
+    "        return \n",
+    "\n",
+    "from pyspark.sql import Row\n",
+    "\n",
+    "def dia_semana(row):\n",
+    "    fecha , hora , utc = row.split(\" \")\n",
+    "    formato_fecha = \"%Y-%m-%d\"\n",
+    "    dia_semana = datetime.isoweekday(datetime.strptime(fecha,formato_fecha))\n",
+    "    return dia_semana\n",
+    "\n",
+    "def hora(row):\n",
+    "    fecha , hora , utc = row.split(\" \")\n",
+    "    formato_hora = \"%H:%M:%S\"\n",
+    "    hora = datetime.strptime(hora,formato_hora).hour\n",
+    "    return hora\n",
+    "    \n",
+    "\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import IntegerType\n",
+    "# convirtiendo las funciones en funciones UDF\n",
+    "udf_dia_semana= udf( lambda z : dia_semana(z))\n",
+    "udf_hora= udf( lambda z : hora(z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "dfspark_sample = dfspark_sample.withColumn('dia_semana', \n",
+    "                                           udf_dia_semana(dfspark_sample['pickup_datetime'] )  )\n",
+    "dfspark_sample = dfspark_sample.withColumn('hora', \n",
+    "                                           udf_hora(dfspark_sample['pickup_datetime'] )  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Castear dia de la semana y hora\n",
+    "dfspark_sample = dfspark_sample.withColumn(\"dia_semana\",\n",
+    "                                           dfspark_sample[\"dia_semana\"].cast(\"Integer\"))\n",
+    "dfspark_sample = dfspark_sample.withColumn(\"hora\",\n",
+    "                                           dfspark_sample[\"hora\"].cast(\"Integer\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observación: En este punto la data estaria totalmente ok."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estadística de las nuevas variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_summary=dfspark_sample.describe().toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnas = [\"pickup_longitude\",\n",
+    "            \"pickup_latitude\",\n",
+    "            \"dropoff_longitude\",\n",
+    "            \"dropoff_latitude\",\n",
+    "            \"passenger_count\",\n",
+    "            \"fare_amount\",\n",
+    "            \"dif_latitude\",\n",
+    "            \"dif_longitude\",\n",
+    "            \"dia_semana\",\n",
+    "            \"hora\"]\n",
+    "clean_summary[columnas]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlación de los atributos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_old=[\"pickup_longitude\",\n",
+    "         \"pickup_latitude\",\n",
+    "         \"dropoff_longitude\",\n",
+    "         \"dropoff_latitude\",\n",
+    "         \"passenger_count\"]\n",
+    "col_new=[\"dif_latitude\",\n",
+    "         \"dif_longitude\",\n",
+    "         \"dia_semana\",\n",
+    "         \"hora\"]\n",
+    "col_pred = [\"fare_amount\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transformación en un vector\n",
+    "from pyspark.mllib.linalg import Vectors\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "inputCols = col_old+col_new+col_pred\n",
+    "assembler = VectorAssembler( inputCols=inputCols, outputCol=\"col_corr\")\n",
+    "dfspark_corr = assembler.transform(dfspark_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfspark_corr=dfspark_corr.select('col_corr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# estudiar la correlación\n",
+    "from pyspark.ml.stat import Correlation\n",
+    "\n",
+    "dfspark_corr= Correlation.corr(dfspark_corr, 'col_corr','pearson')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.linalg import DenseMatrix, Vectors\n",
+    "#type(dfspark_cor.collect()[0][0]) # denseMatrix\n",
+    "# Pasamos la matrix como un array.\n",
+    "array_corr=dfspark_corr.collect()[0][0].toArray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf_corr= pd.DataFrame(array_corr, columns=inputCols, index=inputCols)\n",
+    "mask = ~(pdf_corr>-0.3) | ~(pdf_corr<0.3)\n",
+    "round(pdf_corr,10).style.background_gradient()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observación:\n",
+    "###### La variable a predecir fare_amount itnee muy baja correlación con las demás variables. Su mayor correlación es con passenger_count y hora. Pero si observamos correlación entre las demás variables. Definitivamente no podemos utilizar un modelo lineal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualización de la data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pasamos toda la data a Pandas\n",
+    "pandasData = dfspark_sample.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "sns.set(style=\"ticks\" , color_codes = True)\n",
+    "var = [\"dia_semana\"]\n",
+    "# 1 inches = 96px\n",
+    "g = sns.pairplot(pandasData[:10], vars=var, diag_kind=\"hist\", hue='dia_semana', height=4, aspect=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -658,13 +975,6 @@
     "# cerramos la sesión spark\n",
     "sc.stop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -683,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
