Agregando funcion alternativa para pasar a pandas la data

--- a/Predicción de tarifas de taxis.ipynb
+++ b/Predicción de tarifas de taxis.ipynb
@@ -900,6 +900,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Manera alternativa de pasar la data a Pandas\n",
+    "# import pandas as pd\n",
+    "# from pyspark.sql import DataFrame\n",
+    "\n",
+    "# # Wrapper for seamless Spark's serialisation\n",
+    "# def spark_to_pandas(spark_df: DataFrame) -> pd.DataFrame:\n",
+    "#     \"\"\"\n",
+    "#     PySpark toPandas realisation using mapPartitions\n",
+    "#     much faster than vanilla version\n",
+    "#     fork: https://gist.github.com/lucidyan/1e5d9e490a101cdc1c2ed901568e082b\n",
+    "#     origin: https://gist.github.com/joshlk/871d58e01417478176e7\n",
+    "#     :param spark_df:\n",
+    "#     :return:\n",
+    "#     \"\"\"\n",
+    "    \n",
+    "#     def _map_to_pandas(rdds) -> list:\n",
+    "#         \"\"\" Needs to be here due to pickling issues \"\"\"\n",
+    "#         return [pd.DataFrame(list(rdds))]\n",
+    "\n",
+    "#     def _to_pandas(df: DataFrame, n_partitions: int = None) -> pd.DataFrame:\n",
+    "#         \"\"\"\n",
+    "#         Returns the contents of `df` as a local `pandas.DataFrame` in a speedy fashion. The DataFrame is\n",
+    "#         repartitioned if `n_partitions` is passed.\n",
+    "#         :param df:\n",
+    "#         :param n_partitions:\n",
+    "#         :return:\n",
+    "#         \"\"\"\n",
+    "#         if n_partitions is not None:\n",
+    "#             df = df.repartition(n_partitions)\n",
+    "#         df_pand = df.rdd.mapPartitions(_map_to_pandas).collect()  # type: pd.DataFrame\n",
+    "#         df_pand = pd.concat(df_pand)\n",
+    "#         df_pand.columns = df.columns\n",
+    "#         return df_pand\n",
+    "\n",
+    "#     return _to_pandas(spark_df)\n",
+    "\n",
+    "# pandasData = spark_to_pandas(dfspark_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Mostrando la data\n",
+    "display(pandasData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import seaborn as sns\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
