Agregando visualizacion de data 1

--- a/Predicción de tarifas de taxis.ipynb
+++ b/Predicción de tarifas de taxis.ipynb
@@ -969,28 +969,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Cuanto de la variable objetivo va variando segun los dias de la semana\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "carac1=pandasData['dia_semana']\n",
+    "objet=pandasData['fare_amount']\n",
+    "plt.plot(carac1, objet, 'o')\n",
+    "plt.xlabel(\"Característica dia de la semana\")\n",
+    "plt.ylabel(\"Objetivo\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#como los pasajeros se distribuyen a traves de las horas\n",
+    "pandasData.groupby('hora')['passenger_count'].sum().plot(kind='barh',legend='Reverse',figsize=(10,10))\n",
+    "plt.xlabel('')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#como se reparten los pasajeros en funcion de la hora\n",
+    "pandasData.passenger_count.groupby(pandasData.hora).sum().plot(kind='pie',cmap='Paired',figsize=(12,8))\n",
+    "plt.axis('equal')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Dispersion de las características\n",
+    "caracteristicas=pandasData[['fare_amount','pickup_longitude','pickup_latitude','dropoff_longitude']]\n",
+    "sns.set(style=\"ticks\", color_codes=True)\n",
+    "g= sns.pairplot(caracteristicas,hue='fare_amount',palette='Spectral')"
+   ]
   },
   {
    "cell_type": "code",
