Agregando visualizacion 2 de la data

--- a/Predicción de tarifas de taxis.ipynb
+++ b/Predicción de tarifas de taxis.ipynb
@@ -1019,14 +1019,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g=sns.lmplot(x='passenger_count',y='hora',data=caracteristicas,palette='Set1')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Relación entre dos caracteristicas vista como tendencia lineal\n",
+    "g=sns.lmplot(x='passenger_count',y='hora',hue='dia_semana',data=caracteristicas,palette='Set1')"
+   ]
   },
   {
    "cell_type": "code",
